# token-substreams

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.sink  Makefile  README.md  entrypoint.sh  release-utility.sh  subgraph.yaml  substreams.yaml
common/: Cargo.toml
common/proto/: events.proto
common/src/: lib.rs
common/src/pb/: mod.rs  zdexer.eth.events.v1.rs
common_events/: Cargo.toml  Makefile  build.rs  substreams.yaml
common_events/src/: db.rs  lib.rs
erc1155/: Cargo.toml  Makefile  build.rs  substreams.yaml
erc1155/proto/: erc1155.proto
erc1155/src/: db_out.rs  graph_out.rs  lib.rs  rpc.rs
erc1155/src/abi/: mod.rs
erc1155/src/pb/: mod.rs  zdexer.eth.erc1155.v1.rs  zdexer.eth.events.v1.rs
erc1155/src/utils/: helper.rs  keyer.rs
erc20/: Cargo.toml  Makefile  build.rs  schema.graphql  subgraph.yaml  substreams.yaml
erc20/proto/: erc20.proto
erc20/src/: db_out.rs  graph_out.rs  lib.rs
erc20/src/abi/: mod.rs  ownable.rs
erc20/src/pb/: mod.rs  zdexer.eth.erc20.v1.rs
erc20/src/utils/: helper.rs  keyer.rs
erc721/: Cargo.toml  Makefile  build.rs  substreams.yaml
erc721/abi/: erc721.json
erc721/proto/: erc721.proto
erc721/src/: db_out.rs  graph_out.rs  lib.rs  rpc.rs
erc721/src/pb/: mod.rs  zdexer.eth.erc721.v1.rs
erc721/src/utils/: helper.rs  keyer.rs
graph-node/: compose-db.yml  compose-indexer.yml  compose-monitoring.yml  set_config.sh  start-all.sh  start-essential.sh
graph-node/config/: config.tmpl
graph-node/grafana/provisioning/dashboards/: indexing-performance-metrics.json  substreams-metrics.json
graph-node/prometheus/: prometheus.yml
proto/: erc20.proto
schema/: schema.graphql  schema.sql
src/: db_out.rs  graph_out.rs  lib.rs
src/pb/: mod.rs
src/utils/: helper.rs  mod.rs
tokens/: .gitignore  Cargo.toml  Makefile  substreams.yaml
tokens/src/: lib.rs
