[package]
name = "common_events"
version = "0.0.1"
edition = "2021"

[lib]
name = "common_events"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
num-bigint = "0.4.3"
common = {path = "../common"}

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"