[package]
name = "erc721"
version = "0.0.1"
edition = "2021"

[lib]
name = "erc721"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
hex = "0.4.3"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
substreams-database-change = "1.0.0"
substreams-entity-change = "0.3.0"
num-bigint = "0.4.3"
common = {path = "../common"}

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"