[package]
name = "token_substreams"
version = "0.0.1"
edition = "2021"

[lib]
name = "token_substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-database-change = "1.0.0"
substreams-entity-change = "0.3.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }